--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -1,15 +1,11 @@
 .card {
   background: rgba(19, 41, 61, 0.53);
-  box-shadow: 0 8px 32px 0 rgba(70, 130, 180, 0.2);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  border-radius: 10px;
-  border: 1px solid rgba(70, 130, 180, 0.1);
+  border: 5px solid rgba(70, 130, 180, 0.1);
   padding: 1rem;
-  color: #fff;
+  color: grey;
   text-align: center;
-  width: 30%;
-  margin: 5px;
+  width: 20%;
+  margin: 15px;
 }
 
 .card h2 {
